--- a/Mariia_Kindratyshyn_DLS.ipynb
+++ b/Mariia_Kindratyshyn_DLS.ipynb
@@ -31,7 +31,7 @@
         "Donation Date: 11/30/1995\n",
         "\n",
         "### **Objective**:\n",
-        "The dataset aims to predict the age of abalone based on physical measurements, providing an alternative to the laborious and time-consuming process of determining age through microscopic examination of shell rings."
+        "The dataset aims to predict the age (if abalone is old) of abalone based on physical measurements, providing an alternative to the laborious and time-consuming process of determining age through microscopic examination of shell rings."
       ],
       "id": "21585449-d24b-4521-b3d0-e4af195adbc1"
     },
@@ -42,9 +42,11 @@
       },
       "source": [
         "###**Goal**:\n",
-        "Predict the age of abalone from physical measurements\n",
+        "Predict the age (old - young) of abalone from physical measurements\n",
         "\n",
-        "**Age**: Rings + 1.5 = Age in years"
+        " Rings + 1.5 = Age in years\n",
+        "\n",
+        "**Age**: Old - 0, Young - 1"
       ],
       "id": "c20af280-1abb-4b04-822b-bcb72882f854"
     },
